chore: Clean-up [DHIS2-19989]