@@ -371,7 +371,7 @@ public abstract class AbstractJdbcEventAnalyticsManager {
    * @return the columns without aliases.
    */
   List<String> removeAliases(List<String> columns) {
-    return columns.stream().map(c -> substringBefore(c, " as ")).collect(toList());
+    return columns.stream().map(c -> substringBefore(c, " as ")).toList();
   }
 
   /**
